<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".module.login.LoginActivity"
    android:background="@drawable/ic_app_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/back_sec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp">

                <TextView
                    android:id="@+id/back_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/sfprotextregular"
                    android:text=""
                    android:textColor="@color/color_white"
                    android:textSize="12sp"
                    app:layout_constraintStart_toEndOf="@+id/back_arrow"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/back_arrow"
                    android:layout_width="18dp"
                    android:layout_height="15dp"
                    android:layout_marginStart="11dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/ic_arrow_left_white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/cancle_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="14dp"
                    android:fontFamily="@font/sfprotextsemibold"
                    android:text="2 of 3"
                    android:textColor="@color/color_white"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#4A368D"
                android:text="@string/BasicDetails"
                android:layout_gravity="bottom"
                android:paddingStart="10dp"
                android:textSize="22sp"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:orientation="horizontal">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_text_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_weight=".65"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_margin="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_edit_text"
                    android:layout_width="match_parent"
                    android:paddingStart="10dp"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/FullName" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.0"
            android:gravity="center"
            android:orientation="horizontal">


            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_margin="15dp"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:background="@android:drawable/btn_dropdown"
                android:id="@+id/gender_type">
            </Spinner>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:visibility="gone"
            android:orientation="horizontal">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_gender"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_weight=".65"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_margin="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/gender_edit_text"
                    android:layout_width="match_parent"
                    android:paddingStart="10dp"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text="@string/Transgender"
                    android:enabled="false"
                    android:maxLength="15"
                    android:hint="@string/Gender" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>








    </LinearLayout>


    <TextView
        android:id="@+id/next"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginEnd="5dp"
        android:gravity="center"
        android:textAllCaps="true"
        android:background="@color/colorPurple"
        android:tag="true"
        android:text="@string/Next"
        android:textColor="@color/color_white"
        android:textSize="14sp"
        android:layout_alignParentBottom="true"/>




</RelativeLayout>