<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".module.login.PreLoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        </FrameLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">





        </RelativeLayout>

        <LinearLayout
            android:id="@+id/tourSwitcher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/signUpBtn"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:weightSum="5">

            <LinearLayout
                android:layout_width="0dp"
                android:id="@+id/tour1"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tourBar1"
                    android:layout_width="0dp"
                    android:layout_height="5dp"
                    android:layout_margin="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_purple_bar"
                    android:visibility="visible" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:id="@+id/tour2"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tourBar2"
                    android:layout_width="0dp"
                    android:layout_height="5dp"
                    android:layout_margin="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_white_bar"
                    android:visibility="visible" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:id="@+id/tour3"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tourBar3"
                    android:layout_width="0dp"
                    android:layout_height="5dp"
                    android:layout_margin="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_white_bar"
                    android:visibility="visible" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:id="@+id/tour4"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tourBar4"
                    android:layout_width="0dp"
                    android:layout_height="5dp"
                    android:layout_margin="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_white_bar"
                    android:visibility="visible" />

            </LinearLayout>



        </LinearLayout>

        <Button
            android:id="@+id/signUpBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/loginLayout"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="20dp"
            android:layout_marginBottom="80dp"
            android:background="@drawable/rounded_rectangle_purple"
            android:text="@string/SignUp"
            android:textColor="@color/color_white"/>

        <LinearLayout
            android:id="@+id/loginLayout"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_alignParentBottom="true"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/alredy_hav"/>

            <TextView
                android:layout_width="match_parent"
                android:id="@+id/loginBtn"
                android:layout_height="wrap_content"
                android:layout_above="@+id/loginLayout"
                android:layout_alignEnd="@+id/loginLayout"
                android:layout_marginBottom="20dp"
                android:gravity="end"
                android:paddingEnd="20dp"
                android:textAllCaps="true"
                android:text="@string/Login"
                android:textAlignment="textEnd"
                android:textColor="@color/colorPurple"
                android:textSize="15dp" />


        </LinearLayout>


    </RelativeLayout>

</FrameLayout>